# games.scraper.bot.ts

./: .envrc.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  cron-job.yaml  job.yaml  test.yaml
src/: __init__.py  bot.py  config.py  config.ts  date.ts  date_utils.py  domain.py  domain.ts  format.py  format.ts  index.ts  logger.py  logger.ts  main.py  scrape.py  scrape.ts  telegram.ts
test/: date.test.ts  format.test.ts
tests/: test_date.py  test_format.py  test_scrape.py
